# edje_pick

./: .gitignore  AUTHORS  COPYING  Makefile.am  README  config.h  config.h.in  config.status  configure  configure.ac  edje_pick.pc  edje_pick.pc.in
icons/: Makefile.am
src/lib/: Edje_Pick.h  Makefile.am  edje_pick_core.c
